ROS mmsys.cpl does not show which sounds have a file assigned and which are not.
Windows XP mmsys.cpl uses tree view control for that which improves user experience a lot, see attached screenshot.
ROS mmsys.cpl does not show which sounds have a file assigned and which are not.
Windows XP mmsys.cpl uses tree view control for that which improves user experience a lot, see attached screenshot.