[MMSYS] Replace the sound event list ListView by a TreeView.

CORE-15584